--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,16 +1,6 @@
-2)	Sorteer
-Laat in “omgekeerde” alfabetische ordening alle verschillende woorden zien. Maak gebruik van de Klasse Collections om de ordening te bewerkstelligen. De output voor het kinderversje moet zijn:
-
-vier
-van
-twee
-papier
-hoedje
-een
-drie
-
 3)	Frequentie
-Het bijhouden hoeveel keer een woord voorkomt in de tekst gesorteren op frequentie. De output moet alsvolgt zijn:
+Het bijhouden hoeveel keer een woord voorkomt in de tekst gesorteren op frequentie. 
+De output moet alsvolgt zijn:
 
 papier:	1
 drie:		2
@@ -23,7 +13,9 @@ van:		3
  
 
 4)	Concordantie
-Een concudantie voor de gegeven tekst is een lijst van alle woorden die in een tekst voorkomen, met de verwijzing naar de plaats waar ze staan. Een concordantie van dit kinderversje ziet er zo uit:
+Een concudantie voor de gegeven tekst is een lijst van alle woorden 
+die in een tekst voorkomen, met de verwijzing naar de plaats waar ze staan. 
+Een concordantie van dit kinderversje ziet er zo uit:
 
 drie:		[1, 3]
 een:		[1, 3]
